<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.splash.SplashScreenActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <ImageView
        android:id="@+id/imageSplashBackground1"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/SplashScreenBackgroundImageView"
        android:contentDescription="@string/title_description_image_background_splash_1"
        android:src="@drawable/img_splash_screen"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageBackground2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        style="@style/SplashScreenBackgroundImageView"
        android:contentDescription="@string/title_description_image_background_splash_2"
        android:src="@drawable/img_splash_screen"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline" />

    <ImageView
        android:id="@+id/imageFoodDaily"
        android:layout_width="@dimen/dp_290"
        android:layout_height="@dimen/dp_248"
        android:adjustViewBounds="true"
        android:contentDescription="@string/title_description_image_food_daily"
        android:src="@drawable/img_food_detail"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textLoadingData"
        style="@style/SplashScreenTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_loading_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageLoadData" />

    <ImageView
        android:id="@+id/imageLoadData"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/title_description_icon_loading_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageFoodDaily"
        app:srcCompat="@drawable/ic_rotate" />
</androidx.constraintlayout.widget.ConstraintLayout>
