<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_216"
    android:paddingStart="@dimen/dp_4"
    android:paddingTop="@dimen/dp_8"
    android:paddingEnd="@dimen/dp_4"
    android:paddingBottom="@dimen/dp_4"
    android:background="@drawable/shape_search_view">

    <TextView
        android:id="@+id/textCongratulations"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/title_congratulations"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="@dimen/sp_24"
        app:layout_constraintBottom_toTopOf="@+id/textQuestionShare"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textQuestionShare"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:maxLines="2"
        android:text="@string/question_share_recipe"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_16"
        app:layout_constraintBottom_toTopOf="@+id/buttonNoThank"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textCongratulations" />

    <Button
        android:id="@+id/buttonNoThank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_56"
        android:background="@android:color/transparent"
        android:text="@string/button_no_thank"
        android:textSize="@dimen/sp_16"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:drawableStart="@drawable/ic_cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonShareOnFacebook"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textQuestionShare" />

    <Button
        android:id="@+id/buttonShareOnFacebook"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:background="@android:color/transparent"
        android:text="@string/button_share_on_facebook"
        android:textSize="@dimen/sp_12"
        android:textAllCaps="false"
        android:textColor="@android:color/holo_blue_dark"
        android:drawableStart="@drawable/ic_facebook"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/buttonNoThank" />
</androidx.constraintlayout.widget.ConstraintLayout>
