<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/dp_216"
    android:paddingStart="@dimen/dp_8"
    android:paddingEnd="@dimen/dp_8"
    android:paddingBottom="@dimen/dp_8">

    <ImageButton
        android:id="@+id/buttonCloseChooseDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_2"
        android:background="@android:color/transparent"
        android:contentDescription="@null"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_delete" />

    <TextView
        android:id="@+id/textChooseCollection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/title_choose_the_collection"
        android:textColor="@android:color/black"
        android:textSize="@dimen/sp_24"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/buttonFavorite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonCloseChooseDialog" />

    <Button
        android:id="@+id/buttonFavorite"
        style="@style/ButtonChooseDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_4"
        android:background="@drawable/shape_button_favorite"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/title_favorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonFamily"
        app:layout_constraintHorizontal_chainStyle="spread"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textChooseCollection" />

    <Button
        android:id="@+id/buttonFamily"
        style="@style/ButtonChooseDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_4"
        android:background="@drawable/shape_button_family"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/title_family"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonParty"
        app:layout_constraintStart_toEndOf="@+id/buttonFavorite"
        app:layout_constraintTop_toBottomOf="@+id/textChooseCollection" />

    <Button
        android:id="@+id/buttonParty"
        style="@style/ButtonChooseDialog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_button_party"
        android:foreground="?attr/selectableItemBackgroundBorderless"
        android:text="@string/title_party"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonFamily"
        app:layout_constraintTop_toBottomOf="@+id/textChooseCollection" />
</androidx.constraintlayout.widget.ConstraintLayout>
