<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="@dimen/dp_8">

    <TextView
        android:id="@+id/textDailyMenu"
        style="@style/HomeScreenTextView"
        android:text="@string/title_daily_menu"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <FrameLayout
        android:id="@+id/frameDailyMenu"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_224"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDailyMenu">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewDailyMenu"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            tools:listitem="@layout/item_daily_menu_food" />
    </FrameLayout>

    <View
        android:id="@+id/viewLine"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_1"
        android:background="@color/Gray_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameDailyMenu" />

    <TextView
        android:id="@+id/textOtherFood"
        style="@style/HomeScreenTextView"
        android:text="@string/title_other_food"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewLine" />

    <FrameLayout
        android:id="@+id/frameOtherFood"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textOtherFood">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerViewOtherFood"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:listitem="@layout/item_other_food_list" />
    </FrameLayout>

    <Button
        android:id="@+id/buttonSortOtherFood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:background="@android:color/transparent"
        android:drawableStart="@drawable/ic_sort"
        android:text="@string/button_sort"
        android:textColor="@color/Gray_500"
        app:layout_constraintBottom_toBottomOf="@+id/textOtherFood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/textOtherFood" />
</androidx.constraintlayout.widget.ConstraintLayout>
